[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://mianFunction/allCatInfo/popup_cat_detail.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="popup_cat_detail" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 2 )

[node name="InfoField" type="VBoxContainer" parent="."]
anchor_right = 0.998
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -1.95203
margin_bottom = -4.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="cat_id" type="HBoxContainer" parent="InfoField"]
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_id"]
margin_right = 506.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "猫咪编号"
align = 1
valign = 1

[node name="Label2" type="Label" parent="InfoField/cat_id"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="cat_name" type="HBoxContainer" parent="InfoField"]
margin_top = 45.0
margin_right = 1016.0
margin_bottom = 86.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_name"]
margin_right = 506.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "名字"
align = 1
valign = 1

[node name="Label2" type="Label" parent="InfoField/cat_name"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "default_name"
align = 1
valign = 1
autowrap = true

[node name="cat_sex" type="HBoxContainer" parent="InfoField"]
margin_top = 90.0
margin_right = 1016.0
margin_bottom = 131.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_sex"]
margin_right = 506.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "性别"
align = 1
valign = 1

[node name="Label2" type="Label" parent="InfoField/cat_sex"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="cat_kind" type="HBoxContainer" parent="InfoField"]
margin_top = 135.0
margin_right = 1016.0
margin_bottom = 176.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_kind"]
margin_right = 506.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "种类"
align = 1
valign = 1

[node name="Label2" type="Label" parent="InfoField/cat_kind"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="cat_color" type="HBoxContainer" parent="InfoField"]
margin_top = 180.0
margin_right = 1016.0
margin_bottom = 221.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_color"]
margin_right = 506.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "颜色"
align = 1
valign = 1

[node name="Label2" type="Label" parent="InfoField/cat_color"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="cat_description" type="HBoxContainer" parent="InfoField"]
margin_top = 225.0
margin_right = 1016.0
margin_bottom = 552.0
size_flags_horizontal = 7
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="InfoField/cat_description"]
margin_right = 506.0
margin_bottom = 327.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "补充信息"
align = 1

[node name="Label2" type="ScrollContainer" parent="InfoField/cat_description"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 327.0
size_flags_horizontal = 7
follow_focus = true
scroll_horizontal_enabled = false

[node name="TextEdit" type="TextEdit" parent="InfoField/cat_description/Label2"]
margin_right = 506.0
margin_bottom = 327.0
size_flags_horizontal = 7
size_flags_vertical = 3
text = "1231321231232132131231312312321312312321321321312312312312321312312321312312312321312313131233133131231231312213123123123312312"
readonly = true
draw_spaces = true
virtual_keyboard_enabled = false
wrap_enabled = true

[node name="HSeparator" type="HSeparator" parent="InfoField"]
margin_top = 556.0
margin_right = 1016.0
margin_bottom = 560.0

[node name="HBoxContainer" type="HBoxContainer" parent="InfoField"]
margin_top = 564.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="Control" type="Control" parent="InfoField/HBoxContainer"]
margin_right = 438.0
margin_bottom = 28.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Delete" type="Button" parent="InfoField/HBoxContainer"]
margin_left = 442.0
margin_right = 573.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 0.3
text = "删除"

[node name="Control2" type="Control" parent="InfoField/HBoxContainer"]
margin_left = 577.0
margin_right = 1016.0
margin_bottom = 28.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
popup_exclusive = true
window_title = "请确认..."
dialog_text = "确认要删除该猫咪的信息吗？"

[connection signal="pressed" from="InfoField/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
